:hammer: Refactor File manipulation structure